# flamegrower

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  justfile  shell.nix
asset-sources/: blender-export.py
asset-sources/models/: player.blend
asset-sources/scenes/: test.json
asset-sources/tiled/: export.jq  flamegrower.tiled-project  flamegrower.tiled-session  obj-types.json
assets/: settings.json  settings.ron
assets/scenes/: test.ron
nix/: sources.json
src/: fire.rs  main.rs  player.rs  recipes.rs  scene.rs  settings.rs
src/player/: interactables.rs
