[package]
name = "floramancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starframe = { path = "../starframe" }

# TODO: think about exposing wgpu and winit from starframe
# to ensure same version
wgpu = "0.10.1"
winit = "0.25.0"

serde = { version = "1.0.130", features = ["derive"] }
assets_manager = { version = "0.6.1", features = ["hot-reloading", "ron"] }
lazy_static = "1.4.0"
