[package]
name = "flamegrower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starframe = { path = "../starframe" }

# TODO: think about exposing wgpu and winit from starframe
# to ensure same version
wgpu = "0.12.0"
winit = "0.26.0"

serde = { version = "1.0.132", features = ["derive"] }
assets_manager = { version = "0.7.1", features = ["hot-reloading", "json"] }
lazy_static = "1.4.0"

[profile.dev.package."*"]
opt-level = 2
