[package]
name = "flamegrower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starframe = { path = "./starframe" }

serde = { version = "1.0.140", features = ["derive"] }
assets_manager = { version = "0.8.1", features = ["hot-reloading", "json"] }
lazy_static = "1.4.0"

[profile.dev.package."*"]
opt-level = 2
